--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -16,7 +16,7 @@
     <% active_filters.each do |filter| %>
       <span class="bg-white text-green-800 border border-green-200 px-2 py-1 rounded text-sm flex items-center gap-2 shadow-sm">
         <%= filter[:label] %>
-        <%= link_to recipes_path(params.permit(:sort, :direction, :q, :min_rating, :tag, :ingredient_id, :collection_id).except(filter[:param])), class: "text-green-600 hover:text-green-800" do %>
+        <%= link_to recipes_path(params.permit(:sort, :direction, :q, :min_rating, :tag, :ingredient_id, :collection_id, :filter).except(filter[:param])), class: "text-green-600 hover:text-green-800" do %>
           <i class="fas fa-times"></i>
         <% end %>
       </span>
@@ -74,6 +74,17 @@
       </div>
     <% end %>
 
+    <% if Current.user %>
+      <div class="flex flex-col gap-1 min-w-[150px] flex-1">
+        <label class="label-field mb-0">&nbsp;</label>
+        <label class="inline-flex items-center gap-2 cursor-pointer py-1.5 px-3 bg-white border border-gray-300 rounded hover:bg-gray-50 transition-colors h-[34px]">
+          <%= f.check_box :filter, { checked: params[:filter] == "favorites", onchange: "this.form.submit()", class: "hidden" }, "favorites", "" %>
+          <i class="<%= params[:filter] == 'favorites' ? 'fas text-red-600' : 'far text-gray-400' %> fa-heart"></i>
+          <span class="<%= params[:filter] == 'favorites' ? 'font-medium text-gray-900' : 'text-gray-600' %> text-sm select-none">Nur Favoriten</span>
+        </label>
+      </div>
+    <% end %>
+
     <div class="flex gap-2">
       <%= f.submit "Filtern", class: "btn btn-primary btn-sm h-[34px]" %>
     </div>
@@ -112,8 +123,16 @@
             <!-- Content -->
             <div class="flex-1 min-w-0">
               <div class="flex justify-between items-start gap-2">
-                 <div class="min-w-0">
-                    <%= link_to recipe.title, recipe_path(recipe), class: "link font-bold text-lg leading-tight block mb-1 truncate group-hover:text-cs-gold transition-colors" %>
+                 <div class="min-w-0 flex-1">
+                    <div class="flex items-center gap-2 mb-1">
+                      <%= link_to recipe.title, recipe_path(recipe), class: "link font-bold text-lg leading-tight truncate group-hover:text-cs-gold transition-colors" %>
+                      <favorite-toggle
+                        favoritable-type="Recipe"
+                        :favoritable-id="<%= recipe.id %>"
+                        :initial-favorited="<%= @favorite_recipe_ids.include?(recipe.id) ? 'true' : 'false' %>"
+                        size="text-lg"
+                      ></favorite-toggle>
+                    </div>
                     <div class="text-xs text-gray-500 mb-2 flex flex-wrap items-center gap-1">
                       <span>von</span>
                       <%= user_badge(recipe.user) %>
