--- a/app/views/passwords/edit.html.erb
+++ b/app/views/passwords/edit.html.erb
@@ -1,9 +1,19 @@
-<h1>Update your password</h1>
+<div class="max-w-md mx-auto mt-10 p-6 bg-white rounded shadow-md border border-gray-200">
+  <h1 class="text-2xl font-bold mb-6 text-center text-cs-dark-red">Neues Passwort festlegen</h1>
 
-<%= tag.div(flash[:alert], style: "color:red") if flash[:alert] %>
+  <%= tag.div(flash[:alert], class: "mb-4 text-red-600 bg-red-50 p-3 rounded") if flash[:alert] %>
 
-<%= form_with url: password_path(params[:token]), method: :put do |form| %>
-  <%= form.password_field :password, required: true, autocomplete: "new-password", placeholder: "Enter new password", maxlength: 72 %><br>
-  <%= form.password_field :password_confirmation, required: true, autocomplete: "new-password", placeholder: "Repeat new password", maxlength: 72 %><br>
-  <%= form.submit "Save" %>
-<% end %>
+  <%= form_with url: password_path(params[:token]), method: :put, class: "space-y-6" do |form| %>
+    <div class="form-group">
+      <%= form.label :password, "Neues Passwort", class: "label-field" %>
+      <%= form.password_field :password, required: true, autocomplete: "new-password", placeholder: "Mind. 6 Zeichen", maxlength: 72, class: "input-field" %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :password_confirmation, "Passwort wiederholen", class: "label-field" %>
+      <%= form.password_field :password_confirmation, required: true, autocomplete: "new-password", placeholder: "Passwort erneut eingeben", maxlength: 72, class: "input-field" %>
+    </div>
+
+    <%= form.submit "Passwort speichern", class: "btn btn-primary w-full" %>
+  <% end %>
+</div>
