--- a/app/views/passwords/new.html.erb
+++ b/app/views/passwords/new.html.erb
@@ -1,8 +1,18 @@
-<h1>Forgot your password?</h1>
+<div class="max-w-md mx-auto mt-10 p-6 bg-white rounded shadow-md border border-gray-200">
+  <h1 class="text-2xl font-bold mb-6 text-center text-cs-dark-red">Passwort vergessen?</h1>
 
-<%= tag.div(flash[:alert], style: "color:red") if flash[:alert] %>
+  <%= tag.div(flash[:alert], class: "mb-4 text-red-600 bg-red-50 p-3 rounded") if flash[:alert] %>
 
-<%= form_with url: passwords_path do |form| %>
-  <%= form.email_field :email_address, required: true, autofocus: true, autocomplete: "username", placeholder: "Enter your email address", value: params[:email_address] %><br>
-  <%= form.submit "Email reset instructions" %>
-<% end %>
+  <%= form_with url: passwords_path, class: "space-y-6" do |form| %>
+    <div class="form-group">
+      <%= form.label :email_address, "Email Adresse", class: "label-field" %>
+      <%= form.email_field :email_address, required: true, autofocus: true, autocomplete: "username", placeholder: "Deine Email Adresse", class: "input-field", value: params[:email_address] %>
+    </div>
+
+    <%= form.submit "Link anfordern", class: "btn btn-primary w-full" %>
+  <% end %>
+
+  <div class="mt-4 text-center text-sm">
+    <%= link_to "Zurück zum Login", new_session_path, class: "text-gray-500 hover:text-cs-dark-red" %>
+  </div>
+</div>
