image for current active users box

--- a/app/views/community/index.html.erb
+++ b/app/views/community/index.html.erb
@@ -104,6 +104,7 @@
         <div class="card-header">
           Gerade aktive User
         </div>
+        <img src="/images/community_user.jpg" alt="Aktive Benutzer" class="w-full h-48 object-cover">
         <div class="card-body">
            <% if @online_users.any? %>
               <div class="flex flex-wrap gap-3">
