--- a/app/views/pages/impressum.html.erb
+++ b/app/views/pages/impressum.html.erb
@@ -1,19 +1,18 @@
-<div class="max-w-3xl mx-auto space-y-6">
+<div class="max-w-3xl mx-auto space-y-8">
   <h1 class="text-3xl font-bold text-gray-900 mb-8">Impressum</h1>
 
   <section class="space-y-4">
     <h2 class="text-xl font-semibold text-gray-800">Angaben gemäß § 5 TMG</h2>
     <p class="text-gray-700">
-      XXX<br>
-      XXX<br>
-      XXX
+      Pawel Cofta<br>
+      Friedrichsruher Str. 26, 14193 Berlin
     </p>
   </section>
 
   <section class="space-y-4">
     <h2 class="text-xl font-semibold text-gray-800">Kontakt</h2>
     <p class="text-gray-700">
-      E-Mail: XXX
+      E-Mail: barkeeper@cocktailscout.de
     </p>
   </section>
 
@@ -24,11 +23,11 @@
     </p>
   </section>
   
-  <section class="space-y-4">
+  <section class="space-y-4 pt-4 border-t border-gray-100">
     <h2 class="text-xl font-semibold text-gray-800">Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</h2>
     <p class="text-gray-700">
-      XXX<br>
-      XXX
+      Pawel Cofta<br>
+      Friedrichsruher Str. 26, 14193 Berlin
     </p>
   </section>
 </div>
