Favicon, apple-touch-icon, PWA, appname

--- a/app/views/pwa/manifest.json.erb
+++ b/app/views/pwa/manifest.json.erb
@@ -1,5 +1,5 @@
 {
-  "name": "Cocktailscout4",
+  "name": "CocktailScout",
   "icons": [
     {
       "src": "/icon.png",
@@ -17,6 +17,6 @@
   "display": "standalone",
   "scope": "/",
   "description": "Cocktailscout4.",
-  "theme_color": "red",
-  "background_color": "red"
+  "theme_color": "#360D0C",
+  "background_color": "#360D0C"
 }
