docs: Update privacy policy and link repo

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,6 +3,9 @@
     <div class="flex justify-center space-x-6 text-sm">
       <%= link_to "Impressum", impressum_path, class: "hover:text-white transition-colors" %>
       <%= link_to "Datenschutz", datenschutz_path, class: "hover:text-white transition-colors" %>
+      <%= link_to "https://github.com/pawel1892/cocktailscout4", class: "hover:text-white transition-colors", target: "_blank", rel: "noopener" do %>
+        <i class="fa-brands fa-github text-lg"></i>
+      <% end %>
     </div>
   </div>
 </footer>
